--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "simple-workout-client",
-    "slug": "simple-workout-client",
+    "name": "simpleworkout-client",
+    "slug": "simpleworkout-client",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -16,13 +16,15 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anonymous.simpleworkoutclient"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.anonymous.simpleworkoutclient"
     },
     "web": {
       "bundler": "metro",
@@ -30,10 +32,19 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
+     
       "expo-router"
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "207f7b96-3810-4d67-bbef-83d9a415c99d"
+      }
     }
   }
 }
