--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll"
   },
@@ -17,9 +17,11 @@
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.6.5",
     "expo": "~50.0.3",
+    "expo-dev-client": "~3.3.8",
     "expo-font": "~11.10.2",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.5",
+    "expo-secure-store": "~12.8.1",
     "expo-splash-screen": "~0.26.3",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
@@ -27,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-auth0": "^3.1.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6"
