--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-navigation/drawer": "^6.6.7",
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.6.5",
     "expo": "~50.0.3",
@@ -30,6 +31,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
     "react-native-auth0": "^3.1.0",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6"
