--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/drawer": "^6.6.7",
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.6.5",
+    "core-js": "^3.36.0",
     "expo": "~50.0.3",
     "expo-dev-client": "~3.3.8",
     "expo-font": "~11.10.2",
@@ -27,15 +30,18 @@
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.1",
+    "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
     "react-native-auth0": "^3.1.0",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
